--- a/index.html
+++ b/index.html
@@ -10,9 +10,10 @@
 <body>
   <main class="container">
     <h1>My Writing</h1>
-    <p class="subtitle">a place where my words live</p>
+    <p class="subtitle">where all my thoughts and wonders roam free</p>
 
     <a class="button" href="writing.html">Enter</a>
   </main>
 </body>
+
 </html>
