--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
     <h1>My Writing</h1>
     <p class="subtitle">where all my thoughts and wonders roam free</p>
 
-    <a class="button" href="writing.html">Enter</a>
+    <a class="button" href="book.html">Enter</a>
   </main>
 </body>
 
 </html>
+
