--- a/writing.html
+++ b/writing.html
@@ -13,10 +13,11 @@
     <p class="subtitle">click to read</p>
 
     <ul class="list">
-      <li><a href="posts/someone-like-yours.html">someone like yours</a></li>
+      <li><a href="book.html#someone-like-yours">someone like yours</a></li>
     </ul>
 
     <a class="back" href="index.html">← back</a>
   </main>
 </body>
+
 </html>
