--- a/writing.html
+++ b/writing.html
@@ -13,7 +13,7 @@
     <p class="subtitle">click to read</p>
 
     <ul class="list">
-      <li><a href="book.html#someone-like-yours">someone like yours</a></li>
+      <li><a href="index.html#someone-like-yours">someone like yours</a></li>
     </ul>
 
     <a class="back" href="index.html">← back</a>
@@ -21,3 +21,4 @@
 </body>
 
 </html>
+
