--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 
   <!-- PageFlip library -->
-  <script src="https://cdn.jsdelivr.net/npm/page-flip/dist/js/page-flip.browser.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
 
   <style>
     /* Center the book */
@@ -27,20 +27,41 @@
 
     /* Each page */
     .page {
-  background: #F5F1E8;
-  color: #141414;
+      background: #F5F1E8;
+      color: #141414;
+      font-family: "Times New Roman", Times, serif;
+      font-size: 1.05rem;
+      line-height: 1.8;
 
-  /* add more padding so shadow doesn't overlap text */
-  padding: 70px 70px;
+      /* SAFE padding so hover shadow doesn't cover text */
+      padding: 75px 70px;
 
-  font-family: "Times New Roman", Times, serif;
-  font-size: 1.05rem;
-  line-height: 1.8;
+      box-sizing: border-box;
+      overflow: hidden;
 
-  box-sizing: border-box;
-}
+      /* makes content feel fuller */
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+    }
 
-    /* Optional: page number */
+    /* Create a gutter like real books (prevents center cutoff) */
+    .stf__item.--left .page {
+      padding-right: 95px;
+      padding-left: 70px;
+    }
+    .stf__item.--right .page {
+      padding-left: 95px;
+      padding-right: 70px;
+    }
+
+    /* Make pageflip shadow softer */
+    .stf__shadow {
+      opacity: 0.55 !important;
+      filter: blur(0.5px);
+    }
+
+    /* Page number */
     .pagenum {
       position: absolute;
       bottom: 20px;
@@ -55,6 +76,7 @@
       font-size: 2rem;
     }
 
+    /* Date styling */
     .page .date {
       color: #16253E;
       font-weight: 650;
@@ -63,10 +85,35 @@
       opacity: 0.95;
     }
 
+    /* Contents list — no bullet + pretty */
+    .contents-list {
+      list-style: none;
+      padding: 0;
+      margin: 30px 0 0;
+    }
+    .contents-list li {
+      margin: 18px 0;
+    }
+    .contents-list a {
+      color: #16253E;
+      text-decoration: none;
+      border-bottom: 1px solid rgba(29, 43, 69, 0.3);
+      font-weight: 600;
+    }
+    .contents-list a:hover {
+      opacity: 0.7;
+    }
+
+    /* Poems */
     .poem {
+      flex: 1;
+      margin-top: 30px;
       font-family: "Courier New", monospace;
       white-space: pre-wrap;
       font-weight: 500;
+      font-size: 1rem;
+      line-height: 1.7;
+      color: #141414;
     }
   </style>
 </head>
@@ -74,24 +121,25 @@
 <body>
   <div class="book-wrapper">
     <div id="book">
-      <!-- PAGE 1 -->
+
+      <!-- PAGE 1 (LEFT) -->
       <div class="page" data-page="home" style="position: relative;">
         <h2>My Writing</h2>
         <p class="subtitle">where all my thoughts and wonders roam free</p>
-        <p style="opacity:0.7; margin-top: 40px;">flip the page →</p>
+        <p style="opacity:0.7; margin-top: 40px;">flip →</p>
         <span class="pagenum">1</span>
       </div>
 
-      <!-- PAGE 2 -->
+      <!-- PAGE 2 (RIGHT) -->
       <div class="page" data-page="contents" style="position: relative;">
         <h2>Contents</h2>
-        <ul>
+        <ul class="contents-list">
           <li><a href="#someone-like-yours">someone like yours</a></li>
         </ul>
         <span class="pagenum">2</span>
       </div>
 
-      <!-- PAGE 3 (left) -->
+      <!-- PAGE 3 -->
       <div class="page" data-page="someone-like-yours" style="position: relative;">
         <h2>someone like yours</h2>
         <p class="date">December 27, 2025</p>
@@ -109,7 +157,7 @@ covers and salty pillow
         <span class="pagenum">3</span>
       </div>
 
-      <!-- PAGE 4 (right) -->
+      <!-- PAGE 4 -->
       <div class="page" data-page="someone-like-yours-2" style="position: relative;">
         <pre class="poem">
 s
@@ -128,13 +176,13 @@ past your posts of her...
       </div>
 
       <!-- Add more pages here -->
+
     </div>
   </div>
 
   <script>
     const bookEl = document.getElementById("book");
 
-    // Create page flip instance
     const pageFlip = new St.PageFlip(bookEl, {
       width: 550,
       height: 700,
@@ -143,29 +191,29 @@ past your posts of her...
       maxWidth: 800,
       minHeight: 500,
       maxHeight: 900,
+
+      /* IMPORTANT: makes page 1 left + page 2 right */
       showCover: false,
+
       mobileScrollSupport: true
     });
 
-    // Load pages
     pageFlip.loadFromHTML(document.querySelectorAll(".page"));
 
-    // Jump to a page if URL hash is present
     function goToHashPage() {
       const hash = window.location.hash.replace("#", "");
       if (!hash) return;
 
-      // Find the page index of the matching data-page attribute
       const pages = [...document.querySelectorAll(".page")];
       const index = pages.findIndex(p => p.dataset.page === hash);
+
       if (index !== -1) {
         pageFlip.flip(index);
       }
     }
 
     window.addEventListener("hashchange", goToHashPage);
-    setTimeout(goToHashPage, 200); // wait for render
+    setTimeout(goToHashPage, 200);
   </script>
 </body>
 </html>
-
