--- a/index.html
+++ b/index.html
@@ -19,11 +19,42 @@
       padding: 40px 20px;
     }
 
-    /* Book container */
-    #book {
-      box-shadow: 0 20px 60px rgba(0,0,0,0.15);
-      border-radius: 8px;
-    }
+/* Book container */
+#book {
+  box-shadow: 0 20px 60px rgba(0,0,0,0.15);
+  border-radius: 8px;
+  position: relative; /* IMPORTANT for crease */
+}
+
+/* Middle crease line */
+#book::after {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  width: 2px;
+  transform: translateX(-1px);
+
+  background: rgba(20, 20, 20, 0.12);
+  box-shadow: 0 0 12px rgba(0,0,0,0.08);
+  pointer-events: none;
+  z-index: 999;
+}
+
+/* Curve shadow effect (optional but gorgeous) */
+#book::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 50%;
+  width: 60px;
+  transform: translateX(-30px);
+  background: radial-gradient(circle, rgba(0,0,0,0.08), transparent 70%);
+  pointer-events: none;
+  z-index: 998;
+}
 
     /* Each page */
     .page {
@@ -116,6 +147,7 @@
       color: #141414;
     }
   </style>
+  
 </head>
 
 <body>
@@ -183,14 +215,18 @@ past your posts of her...
   <script>
     const bookEl = document.getElementById("book");
 
-    const pageFlip = new St.PageFlip(bookEl, {
-      width: 550,
-      height: 700,
-      size: "stretch",
-      minWidth: 350,
-      maxWidth: 800,
-      minHeight: 500,
-      maxHeight: 900,
+   const pageFlip = new St.PageFlip(bookEl, {
+  width: 550,
+  height: 700,
+  size: "stretch",
+  minWidth: 350,
+  maxWidth: 800,
+  minHeight: 500,
+  maxHeight: 900,
+  showCover: false,
+  mobileScrollSupport: true,
+  flippingTime: 450
+});
 
       /* IMPORTANT: makes page 1 left + page 2 right */
       showCover: false,
@@ -217,3 +253,4 @@ past your posts of her...
   </script>
 </body>
 </html>
+
