--- a/index.html
+++ b/index.html
@@ -67,22 +67,27 @@
 
     /* Each page */
     .page {
-      background: #F5F1E8;
-      background: linear-gradient(to bottom, rgba(255,255,255,0.06), transparent 25%);
-      color: #141414;
-      font-family: "Times New Roman", Times, serif;
-      font-size: 1.05rem;
-      line-height: 1.8;
+  background-color: #F5F1E8;
+  background-image: linear-gradient(
+    to bottom,
+    rgba(255,255,255,0.06),
+    rgba(245,241,232,1) 35%
+  );
 
-      padding: 80px 78px;
-      box-sizing: border-box;
-      overflow: hidden;
+  color: #141414;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 1.05rem;
+  line-height: 1.8;
 
-      height: 100%;
-      display: flex;
-      flex-direction: column;
-      position: relative;
-    }
+  padding: 75px 70px;
+  box-sizing: border-box;
+  overflow: hidden;
+
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+}
 
     /* Book gutter: prevents text cut near crease */
     .stf__item.--left .page {
@@ -269,5 +274,6 @@ const pageFlip = new St.PageFlip(bookEl, {
   </script>
 </body>
 </html>
+
 
 
