--- a/index.html
+++ b/index.html
@@ -4,141 +4,106 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>My Writing</title>
-  <link rel="stylesheet" href="style.css" />
 
   <!-- PageFlip library -->
   <script src="https://cdn.jsdelivr.net/npm/page-flip@2.0.7/dist/js/page-flip.browser.min.js"></script>
 
   <style>
-    /* Center the book */
     body {
       margin: 0;
       background: #F5F1E8;
     }
 
+    /* Center the book */
     .book-wrapper {
       display: flex;
       justify-content: center;
       align-items: center;
       min-height: 100vh;
-      padding: 15px 10px;
       width: 100%;
+      padding: 10px;
     }
 
-    /* Book container */
-#book {
-  width: min(1450px, 97vw);
-  height: min(860px, 88vh);
-  margin: 0 auto;
+    /* Book frame (clear + fills screen) */
+    #book {
+      width: min(1500px, 98vw);
+      height: min(880px, 92vh);
 
-  border: 1px solid rgba(20, 20, 20, 0.12);
-  background: #F5F1E8;
+      border: 1px solid rgba(20, 20, 20, 0.16);
+      border-radius: 10px;
 
-  box-shadow:
-    0 22px 70px rgba(0,0,0,0.16),
-    inset 0 0 0 1px rgba(255,255,255,0.25);
+      background: #F5F1E8;
 
-  border-radius: 10px;
-  position: relative;
-}
+      box-shadow:
+        0 28px 90px rgba(0,0,0,0.18),
+        inset 0 0 0 1px rgba(255,255,255,0.35);
 
-    /* Responsive sizing */
-    @media (max-width: 1100px) {
-      #book {
-        width: 92vw;
-        height: 70vh;
-      }
+      overflow: hidden;
     }
 
-    /* Middle crease line */
-#book::after {
-  content: "";
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 50%;
-  width: 1px;
-  transform: translateX(-0.5px);
-  background: rgba(20, 20, 20, 0.08);
-  pointer-events: none;
-  z-index: 999;
-}
-
-
-    /* Each page */
+    /* Each page — FULLY OPAQUE thick paper */
     .page {
-  background-color: #F5F1E8;
-  background-image: linear-gradient(
-    to bottom,
-    rgba(255,255,255,0.06),
-    rgba(245,241,232,1) 35%
-  );
+      background: #F5F1E8 !important;
+      color: #141414;
 
-  color: #141414;
-  font-family: "Times New Roman", Times, serif;
-  font-size: 1.05rem;
-  line-height: 1.8;
+      font-family: "Times New Roman", Times, serif;
+      font-size: 1.08rem;
+      line-height: 1.85;
 
-  padding: 85px 85px;
-  box-sizing: border-box;
-  overflow: hidden;
+      padding: 95px 95px;
+      box-sizing: border-box;
+      height: 100%;
 
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  position: relative;
-}
+      display: flex;
+      flex-direction: column;
 
-    /* Book gutter: prevents text cut near crease */
+      position: relative;
+
+      /* prevents see-through / “thin paper” look */
+      opacity: 1 !important;
+      backface-visibility: hidden;
+      transform: translateZ(0);
+
+      /* subtle paper border effect */
+      box-shadow: inset 0 0 0 1px rgba(0,0,0,0.04);
+    }
+
+    /* Wide gutter margins so nothing clips */
     .stf__item.--left .page {
-  padding-right: 135px;
-  padding-left: 85px;
-}
+      padding-right: 170px;
+      padding-left: 95px;
+    }
 
-.stf__item.--right .page {
-  padding-left: 135px;
-  padding-right: 85px;
-}
+    .stf__item.--right .page {
+      padding-left: 170px;
+      padding-right: 95px;
+    }
 
-    /* Softer flipping shadow */
+    /* Softer shadow while flipping */
     .stf__shadow {
-      opacity: 0.55 !important;
-      filter: blur(0.5px);
+      opacity: 0.45 !important;
+      filter: blur(0.3px);
     }
-
-    /* Page number */
-    .pagenum {
-      position: absolute;
-      bottom: 20px;
-      right: 25px;
-      opacity: 0.55;
-      font-size: 0.9rem;
-    }
-
-.stf__item.--left .pagenum,
-.stf__item.--right .pagenum {
-  right: 30px;
-}
 
     /* Titles */
     .page h2 {
-  margin-top: 0;
-  font-size: 1.85rem;
-  font-weight: 700;
-  max-width: 100%;
-  overflow-wrap: break-word;
-}
+      margin-top: 0;
+      font-size: 2rem;
+      font-weight: 700;
+      max-width: 100%;
+      overflow-wrap: break-word;
+    }
 
     /* Subtitle */
     .subtitle {
-  color: #16253E;
-  opacity: 0.92;
-  margin-top: 10px;
-  font-weight: 500;
-  max-width: 90%;
-}
+      color: #16253E;
+      opacity: 0.92;
+      margin-top: 10px;
+      font-weight: 500;
+      max-width: 90%;
+    }
 
-    /* Date styling */
+    /* Date */
     .date {
       color: #16253E;
       font-weight: 650;
@@ -147,21 +112,24 @@
       opacity: 0.95;
     }
 
-    /* Contents list — no bullets */
+    /* Contents list */
     .contents-list {
       list-style: none;
       padding: 0;
       margin: 30px 0 0;
     }
+
     .contents-list li {
       margin: 18px 0;
     }
+
     .contents-list a {
       color: #16253E;
       text-decoration: none;
       border-bottom: 1px solid rgba(29, 43, 69, 0.3);
       font-weight: 600;
     }
+
     .contents-list a:hover {
       opacity: 0.7;
     }
@@ -170,12 +138,29 @@
     .poem {
       flex: 1;
       margin-top: 30px;
+
       font-family: "Courier New", monospace;
       white-space: pre-wrap;
+
       font-weight: 500;
       font-size: 1rem;
       line-height: 1.7;
+
       color: #141414;
+
+      /* prevents any overflow */
+      max-width: 100%;
+      overflow-wrap: anywhere;
+      word-break: break-word;
+    }
+
+    /* Page numbers */
+    .pagenum {
+      position: absolute;
+      bottom: 22px;
+      right: 32px;
+      opacity: 0.55;
+      font-size: 0.9rem;
     }
   </style>
 </head>
@@ -184,15 +169,15 @@
   <div class="book-wrapper">
     <div id="book">
 
-      <!-- PAGE 1 (LEFT) -->
+      <!-- PAGE 1 -->
       <div class="page" data-page="home">
         <h2>My Writing</h2>
         <p class="subtitle">where all my thoughts and wonders roam free</p>
-        <p style="opacity:0.7; margin-top: 40px;">flip →</p>
+        <p style="opacity:0.7; margin-top: 50px;">flip →</p>
         <span class="pagenum">1</span>
       </div>
 
-      <!-- PAGE 2 (RIGHT) -->
+      <!-- PAGE 2 -->
       <div class="page" data-page="contents">
         <h2>Contents</h2>
         <ul class="contents-list">
@@ -243,21 +228,23 @@ past your posts of her...
   <script>
     const bookEl = document.getElementById("book");
 
-const pageFlip = new St.PageFlip(bookEl, {
-  width: 600,          
-  height: 800,         
-  size: "stretch",
-  showCover: false,
+    const pageFlip = new St.PageFlip(bookEl, {
+      width: 750,
+      height: 880,
+      size: "fixed",
 
-  flippingTime: 450,
-  maxShadowOpacity: 0.4,
-  useMouseEvents: true,
+      showCover: false,
+      useMouseEvents: true,
 
-  mobileScrollSupport: false
-});
+      flippingTime: 450,
+      maxShadowOpacity: 0.45,
+
+      mobileScrollSupport: false
+    });
 
     pageFlip.loadFromHTML(document.querySelectorAll(".page"));
 
+    // Jump to a page if URL hash exists
     function goToHashPage() {
       const hash = window.location.hash.replace("#", "");
       if (!hash) return;
@@ -271,11 +258,7 @@ const pageFlip = new St.PageFlip(bookEl, {
     }
 
     window.addEventListener("hashchange", goToHashPage);
-    setTimeout(goToHashPage, 200);
+    setTimeout(goToHashPage, 150);
   </script>
 </body>
 </html>
-
-
-
-
